# nonepad_editor_view

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  theme.rs
src/text_buffer/: buffer.rs  edit_stack.rs  syntax.rs
src/text_editor/: editor_view.rs  gutter.rs  mod.rs  palette_manager.rs  palette_view.rs  scroll_bar.rs
src/vscode_theme/: mod.rs
