[package]
name = "nonepad_editor_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.2", features = ["im"] }
ropey = "1.2"
unicode-segmentation = "1.6.0"
chardetng = "0.1.3"
encoding_rs = "0.8.17"
anyhow = "1.0"
uuid = { version = "1.3.0", features = ["v4"] }
once_cell = "1.8"
syntect = "5.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hotwatch = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"